--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.6",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
