--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.35.6",
+    "googleapis": "^164.1.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
